# scraper-dagger-basics

./: LICENSE  README.md  Taskfile.yml  dagger.json  pyproject.toml
dagger/: __init__.py  pipeline.py  pyproject.toml
dagger/container/: __init__.py  container_base.py
dagger/pipelines/: __init__.py  pipelines.py
dagger/src/main/: __init__.py
src/: main.py
src/utils/: config.py
