[tool.poetry]
name = "scraper-dagger-basics"
version = "0.1.0"
description = "Basic with pipelines, trivy scan and tests for scrapper project"
authors = ["Necraatall <milan.zlamal.qa@gmail.com>"]
license = "Beerware License (Beer License)"
readme = "README.md"
packages = [{include = "scraper_dagger_basics"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
ruff = "^0.4.4"
dagger-io = "^0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
